# cuda-remote-cmake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  helloworld.cu
